# mssql-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  deny.toml  docker-compose.yml  justfile  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: mcpkit-feature-requests.md
src/: cache.rs  config.rs  constants.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  prompts.rs  resilience.rs  resources.rs  security.rs  server.rs  shutdown.rs  state.rs  telemetry.rs  tools.rs  transport.rs
src/database/: auth.rs  bulk.rs  connection.rs  metadata.rs  query.rs  session.rs  transaction.rs  types.rs
src/security/: identifiers.rs  injection.rs  validation.rs
src/tools/: inputs.rs
tests/: integration_tests.rs
