[package]
name = "mssql-mcp-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "A high-performance MCP server for Microsoft SQL Server"
license = "MIT"
repository = "https://github.com/jkindrix/mssql-mcp-server"
keywords = ["mcp", "mssql", "sql-server", "database", "ai"]
categories = ["database", "development-tools"]

[features]
default = []
http = ["dep:mcpkit-axum", "dep:axum", "dep:tower", "dep:tower-http", "dep:hyper"]
# OpenTelemetry instrumentation - enables both mssql-client spans and our metrics export
telemetry = [
    "mssql-client/otel",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
azure-auth = ["dep:azure_identity", "dep:azure_core"]

[dependencies]
# MCP Protocol SDK
mcpkit = { version = "0.5.0", features = ["server", "tokio-runtime"] }
mcpkit-axum = { version = "0.5.0", optional = true }

# HTTP server (optional, for SSE transport)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true, features = ["util", "limit", "timeout"] }
tower-http = { version = "0.6", optional = true, features = ["cors", "trace"] }
hyper = { version = "1.6", optional = true, features = ["full"] }

# OpenTelemetry (optional, for metrics and tracing export)
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true, features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.27", optional = true, features = ["metrics", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.28", optional = true }

# Azure AD Authentication (optional)
# Note: mssql-client uses azure_identity 0.25 when azure-identity feature is enabled
azure_identity = { version = "0.25", optional = true }
azure_core = { version = "0.25", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQL Server connectivity - modern TDS 7.4/8.0 driver with integrated pooling
# Default features include chrono, uuid, and decimal
mssql-client = "0.5.2"
mssql-driver-pool = "0.5.2"

# Futures utilities (for TryStreamExt)
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging (logs MUST go to stderr, not stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal support for SQL DECIMAL/NUMERIC types
rust_decimal = { version = "1.36", features = ["serde"] }

# UUID support
uuid = { version = "1", features = ["v4", "serde"] }

# Regex for SQL validation
regex = "1.11"
once_cell = "1.20"

# Synchronization primitives (RwLock without poisoning)
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["mssql_server"] }
serial_test = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# cargo-machete ignore list - these are optional feature dependencies
[package.metadata.cargo-machete]
ignored = ["hyper", "tower", "tracing-opentelemetry"]
